@@ -1078,6 +1078,8 @@ enum TrinityStrings
     LANG_AUTO_BROADCAST                 = 11000,
     LANG_INVALID_REALMID                = 11001,
 
+    LANG_ANNOUNCE_ADMIN_COLOR           = 11666,
+
     LANG_REM_TRANSMOGRIFICATIONS_ITEMS  = 11100,
     LANG_ERR_NO_TRANSMOGRIFICATIONS     = 11101,
     LANG_REM_TRANSMOGRIFICATION_ITEM    = 11102,
